Dummy_Package_for_scratch_org/main/default/objects/OrgDiff__c/OrgDiff__c.object-meta.xml
<CustomObject>
    <label>Org Difference</label>
    <nameField>
        <label>Org Difference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Differences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>