Dummy_Package_for_scratch_org/main/default/objects/OrgDiff__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <inlineHelpText>If a value is entered only modification after this date (inclusive) will be added in the Diff</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>