Dummy_Package_for_scratch_org/main/default/objects/OrgDiff__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <inlineHelpText>If a value is entered only modification before this date (inclusive) will be added in the Diff</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>