Dummy_Package_for_scratch_org/main/default/objects/OrgDiff__c/validationRules/Should_be_differents.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_be_differents</fullName>
    <active>true</active>
    <errorConditionFormula>From_Org__c =  To_Org__c</errorConditionFormula>
    <errorDisplayField>To_Org__c</errorDisplayField>
    <errorMessage>The Org&apos;s to be compared can not be the same.</errorMessage>
</ValidationRule>