Dummy_Package_for_scratch_org/main/default/objects/OrgDiff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Org__c</columns>
    <columns>To_Org__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Last_Modified_By_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>